fix modal z-index

--- a/asaas_theme/public/css/asaas-desk.css
+++ b/asaas_theme/public/css/asaas-desk.css
@@ -865,3 +865,7 @@ input[type="checkbox"]:before{
 .page-head{
     z-index: 1080;
 }
+
+.modal{
+    z-index: 1100;
+}
